feat: add handler error types to docs
